[package]
name = "mazes"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
petgraph = "0.6.4"
rand = "0.8.5"
rustc-hash = "1.1.0"

[[bin]]
name = "binary_tree"
path = "demos/binary_tree.rs"

[[bin]]
name = "sidewinder"
path = "demos/sidewinder.rs"

[[bin]]
name = "dijkstra"
path = "demos/dijkstra.rs"

[[bin]]
name = "longest_path"
path = "demos/longest_path.rs"

[[bin]]
name = "coloring"
path = "demos/coloring.rs"
