[package]
name = "mazes"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
petgraph = "0.6.4"
rand = "0.8.5"
rustc-hash = "1.1.0"

[[bin]]
name = "binary_tree"
path = "demos/binary_tree.rs"

[[bin]]
name = "sidewinder"
path = "demos/sidewinder.rs"

[[bin]]
name = "dijkstra"
path = "demos/dijkstra.rs"

[[bin]]
name = "longest_path"
path = "demos/longest_path.rs"

[[bin]]
name = "coloring"
path = "demos/coloring.rs"

[[bin]]
name = "aldous_broder"
path = "demos/aldous_broder.rs"

[[bin]]
name = "wilsons"
path = "demos/wilsons.rs"

[[bin]]
name = "hunt_and_kill"
path = "demos/hunt_and_kill.rs"

[[bin]]
name = "deadend_counts"
path = "demos/deadend_counts.rs"

[[bin]]
name = "recursive_backtracker"
path = "demos/recursive_backtracker.rs"

[[bin]]
name = "simple_mask"
path = "demos/simple_mask.rs"

[[bin]]
name = "ascii_mask"
path = "demos/ascii_mask.rs"

[[bin]]
name = "image_mask"
path = "demos/image_mask.rs"

[[bin]]
name = "circle_maze"
path = "demos/circle_maze.rs"

[[bin]]
name = "hex_maze"
path = "demos/hex_maze.rs"

[[bin]]
name = "triangle_maze"
path = "demos/triangle_maze.rs"

[[bin]]
name = "braid"
path = "demos/braid.rs"

[[bin]]
name = "weighted_grid"
path = "demos/weighted_grid.rs"

[[bin]]
name = "inset"
path = "demos/inset.rs"

[[bin]]
name = "weave"
path = "demos/weave.rs"

[[bin]]
name = "kruskals"
path = "demos/kruskals.rs"

[[bin]]
name = "prims"
path = "demos/prims.rs"

[[bin]]
name = "growing_tree"
path = "demos/growing_tree.rs"

[[bin]]
name = "ellers"
path = "demos/ellers.rs"
